nextflow/20.01.0/README.md
# Installation

```bash
## Commands used for installing the software

# At the time this command was run, the latest stable release available from
# GitHub was 20.01.0
curl -s https://get.nextflow.io | bash

## Ignore all downloaded/installed files
echo "nextflow" >> .gitignore

## Version control files
git add .gitignore
git add README.md
```

# Reproducibility

```bash
## Evaluate the following commands
module list
date
echo "User: ${USER}"
echo "Hostname: ${HOSTNAME}"
```

```bash
## copy paste the output from the previous commands
$ module list

Currently Loaded Modules:
  1) matlab/R2019a     5) gcc/4.4.7
  2) stata/16          6) COMMUNITY_CENTOS7_DEFAULT_ENV
  3) JHPCE_tools/1.0   7) JHPCE_CENTOS7_DEFAULT_ENV
  4) sge/8.1.9

$ date
Fri Mar 20 12:57:24 EDT 2020

$ echo "User: ${USER}"
User: neagles

$ echo "Hostname: ${HOSTNAME}"
Hostname: compute-086.cm.cluster
```
